# fdi_pkgs_server

./: README.md
lee_controller/: CMakeLists.txt  ctrl_logs.m  package.xml
lee_controller/NN/: NN_testing.py  NN_training.py  NNbackup.py  detector.py  matlab_dataset.py  oldNN_training.py  testing.py  testing2.py  training2.py
lee_controller/NN/TS/: humm_ts_2.txt.5p
lee_controller/conf/: firefly_param.yaml  humm_param.yaml  iris_param.yaml  manager.yaml  ndt2.yaml  tarot_param.yaml
lee_controller/launch/: hexa.launch  humm.launch  iris.launch  manager.launch  ndt2.launch  tarot.launch
lee_controller/msg/: fault.msg
lee_controller/src/: analyzer.cpp  main.cpp  main.cpp.old  main_hexa_ok.cpp  network_manager.cpp  planner_spline.cpp  planner_spline.h
lee_controller/src/TSKF/: tskf.cpp  tskf.h
lee_controller/src/controller/: lee_controller.cpp  lee_controller.h
lee_controller/src/extstim/: extstim.cpp  extstim.h
mav_description/launch/: ndt2_with_arm.launch  spawn_ndt2.launch
mav_description/urdf/hummingbird/: hummingbird_base.xacro
mav_description/urdf/iris_smc/: iris_base.xacro
mav_description/urdf/ndt2/: ndt2.xacro
px4_gazebo_standalone/: CMakeLists.txt  README.md  package.xml
px4_gazebo_standalone/src/: px4_gazebo_client.cpp  px4_gazebo_client.h
px4_gazebo_standalone/src/example/: motor_vel_pub.cpp
px4_gazebo_standalone/src/plugin/: gazebo_ros_interface.cpp
